# First-Class-Landing

./: .gitignore  README.md  docker-compose.yml  index.html
FirstClass/: Dockerfile  MakeFile  Makefile  README.md  clean_docker.sh  docker-compose.yml  pyproject.toml
FirstClass/backend/backend/: settings.py
FirstClass/backend/backend/database/: config.py  database_metadata.py
FirstClass/backend/backend/model/: client.py  mixin.py
FirstClass/backend/landing/: models.py
FirstClass/backend/landing/guest/: admin.py
FirstClass/backend/landing/guest/migrations/: 0001_initial.py  0002_alter_enquires_phone.py  0003_alter_enquires_num_of_travelers.py
FirstClass/backend/landing/landing/: settings.py  urls.py
FirstClass/backend/templates/: index.html
FirstClass/django_docker/: Dockerfile  docker-compose.yml  readme.txt  req.txt
FirstClass/django_docker/landing/enquires/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
FirstClass/django_docker/landing/enquires/migrations/: 0001_initial.py  0002_remove_enquires_budge_remove_enquires_confirm_budge_and_more.py  0003_remove_enquires_s_name_enquires_email.py
FirstClass/django_docker/landing/landing/: asgi.py  settings.py  urls.py  wsgi.py
FirstClass/landing/: manage.py
FirstClass/landing/landing/: settings.py  urls.py
FirstClass/tests/: test_firstclass.py
js/: gsap.js  main.js  slider.js
styles/: main.css  reset.css
styles/css/: main.css  reset.css
styles/fonts/: fonts.css
