[tool.poetry]
name = "FirstClass"
version = "0.1.0"
description = ""
authors = ["King4got10 <Aldavletshina77654@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
SQLAlchemy = "^2.0.29"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
django-rest = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
